--- a/src/views/includes/layout.pug
+++ b/src/views/includes/layout.pug
@@ -4,6 +4,7 @@ html(lang="es")
 		meta(charset="utf-8")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
+		meta(http-equiv="cache-control" content="no-cache")
 		block metatags
 		link(rel="stylesheet", href="./animate.min.css")
 		link(rel="stylesheet", href="./styles.css")
